[project]
name = "mono-dl"
version = "0.1.0"
description = "CLI downloader for Monochrome / TIDAL metadata"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mutagen>=1.47.0",
]

[project.scripts]
mono-dl = "mono_dl.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mono_dl*"]
